--- a/static/html/home.html
+++ b/static/html/home.html
@@ -1,140 +1,170 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="../css/home.css" />
-    <link rel="stylesheet" href="../css/bootstrap.css" />
-    <style>
-      @import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
-      @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
-      * {
-        font-family: "Raleway", sans-serif;
-        transition: ease-in-out 50ms;
-      }
-      body {
-        background-color: #f8f9fa;
-      }
-      .log-in {
-        padding: 5px;
-        margin: 0px 5px;
-      }
-      .card {
-        margin: 20px auto;
-        border-radius: 10px;
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+            crossorigin="anonymous"
+        />
+        <link rel="stylesheet" href="../css/home.css" />
+        <link rel="stylesheet" href="../css/bootstrap.css" />
+        <style>
+            @import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
+            @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
+            * {
+                font-family: "Raleway", sans-serif;
+                transition: ease-in-out 50ms;
+            }
+            body {
+                background-color: #f8f9fa;
+            }
+            .log-in {
+                padding: 5px;
+                margin: 0px 5px;
+            }
+            .card {
+                margin: 20px auto;
+                border-radius: 10px;
 
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        transition: transform 0.3s, box-shadow 0.3s;
-      }
-      .card:hover {
-        transform: scale(1.05);
-        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-      }
-      .card-img {
-        border-top-left-radius: 10px;
-        border-top-right-radius: 10px;
-      }
-      .btn-dark {
-        background-color: #343a40;
-        border-color: #343a40;
-      }
-      .btn-dark:hover {
-        background-color: #23272b;
-        border-color: #1d2124;
-      }
-    </style>
-    <title>Document</title>
-  </head>
-  <body>
-    <section id="nabvar">
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">logo</a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/api/add">add</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/api/cart">cart</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a
-                  class="nav-link dropdown-toggle"
-                  href="#"
-                  id="navbarDropdown"
-                  role="button"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                >
-                  sort by
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li>
-                    <a class="dropdown-item" href="#">price(low->high)</a>
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="#">price(high->low)</a>
-                  </li>
-                </ul>
-              </li>
-            </ul>
-            <form class="d-flex" id="search-form">
-              <input
-                class="form-control me-2"
-                type="search"
-                placeholder="Search"
-                aria-label="Search"
-                name="name"
-                id="search"
-              />
-              <button class="btn btn-outline-success" type="submit">
-                Search
-              </button>
-            </form>
-            <div class="log-in" id="log-in">
-              <a class="nav-link" href="/api/log" style="color: white"
-                >Log in</a
-              >
-            </div>
-            <div class="log-in" id="sign-up">
-              <a class="nav-link" href="/api/sign-up" style="color: white"
-                >Sign-up</a
-              >
-            </div>
-            <div class="log-in" id="log-out">
-              <button class="nav-link" style="color: white" onclick="logout()">
-                log out
-              </button>
-            </div>
-          </div>
-        </div>
-      </nav>
-    </section>
-    <script></script>
-    <div class="container mt-5 p-3" id="container"></div>
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="../js/home.js"></script>
-    <script src="../js/bootstrap.bundle.js"></script>
-  </body>
+                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+                transition:
+                    transform 0.3s,
+                    box-shadow 0.3s;
+            }
+            .card:hover {
+                transform: scale(1.05);
+                box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+            }
+            .card-img {
+                border-top-left-radius: 10px;
+                border-top-right-radius: 10px;
+            }
+            .btn-dark {
+                background-color: #343a40;
+                border-color: #343a40;
+            }
+            .btn-dark:hover {
+                background-color: #23272b;
+                border-color: #1d2124;
+            }
+        </style>
+        <title>Document</title>
+    </head>
+    <body>
+        <section id="nabvar">
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#">logo</a>
+                    <button
+                        class="navbar-toggler"
+                        type="button"
+                        data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent"
+                        aria-controls="navbarSupportedContent"
+                        aria-expanded="false"
+                        aria-label="Toggle navigation"
+                    >
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div
+                        class="collapse navbar-collapse"
+                        id="navbarSupportedContent"
+                    >
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a
+                                    class="nav-link active"
+                                    aria-current="page"
+                                    href="#"
+                                    >Home</a
+                                >
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/api/add">add</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/api/cart">cart</a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a
+                                    class="nav-link dropdown-toggle"
+                                    href="#"
+                                    id="navbarDropdown"
+                                    role="button"
+                                    data-bs-toggle="dropdown"
+                                    aria-expanded="false"
+                                >
+                                    sort by
+                                </a>
+                                <ul
+                                    class="dropdown-menu"
+                                    aria-labelledby="navbarDropdown"
+                                >
+                                    <li>
+                                        <a class="dropdown-item" href="#"
+                                            >price(low->high)</a
+                                        >
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="#"
+                                            >price(high->low)</a
+                                        >
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
+                        <form class="d-flex" id="search-form">
+                            <input
+                                class="form-control me-2"
+                                type="search"
+                                placeholder="Search"
+                                aria-label="Search"
+                                name="name"
+                                id="search"
+                            />
+                            <button
+                                class="btn btn-outline-success"
+                                type="submit"
+                            >
+                                Search
+                            </button>
+                        </form>
+                        <div class="log-in" id="log-in">
+                            <a
+                                class="nav-link"
+                                href="/api/log"
+                                style="color: white"
+                                >Log in</a
+                            >
+                        </div>
+                        <div class="log-in" id="sign-up">
+                            <a
+                                class="nav-link"
+                                href="/api/sign-up"
+                                style="color: white"
+                                >Sign-up</a
+                            >
+                        </div>
+                        <div class="log-in" id="log-out">
+                            <button
+                                class="nav-link"
+                                style="color: white"
+                                onclick="logout()"
+                            >
+                                log out
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+        </section>
+        <script></script>
+        <div class="container mt-5 p-3" id="container"></div>
+        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+        <script src="../js/home.js"></script>
+        <script src="../js/bootstrap.bundle.js"></script>
+    </body>
 </html>
