added profile page

--- a/static/html/home.html
+++ b/static/html/home.html
@@ -157,6 +157,14 @@
                                 log out
                             </button>
                         </div>
+                        <div class="log-in" id="profile">
+                            <a
+                                class="nav-link"
+                                href="/api/profile"
+                                style="color: white"
+                                >profile</a
+                            >
+                        </div>
                     </div>
                 </div>
             </nav>
