connected database to profile page and added animation

--- a/static/html/add.html
+++ b/static/html/add.html
@@ -89,6 +89,11 @@
                 log out
               </button>
             </div>
+            <div class="log-in" id="profile">
+              <a class="nav-link" href="/api/profile" style="color: white"
+                >profile</a
+              >
+            </div>
           </div>
         </div>
       </nav>
