--- a/static/html/cart.html
+++ b/static/html/cart.html
@@ -78,7 +78,7 @@
                 <a class="nav-link" href="/api/home">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/api/add">add</a>
+                <a class="nav-link" href="/api/product">add</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="/api/cart"
@@ -110,6 +110,11 @@
               <button class="nav-link" style="color: white" onclick="logout()">
                 log out
               </button>
+            </div>
+            <div class="log-in" id="profile">
+              <a class="nav-link" href="/api/profile" style="color: white"
+                >profile</a
+              >
             </div>
           </div>
         </div>
